# LLMSafeSpaces

./: .gitignore  .trivyignore  404.html  CHANGELOG.md  COORDINATE.md  Makefile  README-LLM.md  README.md  go.mod  go.sum  helm-values-gen  index.html  index.yaml  llmsafespaces-0.3.0.tgz  mkdocs.yml  renovate.json  requirements.txt  sitemap.xml  values-cluster.yaml
.github/: cr.yaml
0047_2026-05-29_suspend-resume-debug/: index.html
0048_2026-05-29_secrets-bind-auto-reload/: index.html
0049_2026-06-09_context-limit-ux-error-surfacing/: index.html
api/: Dockerfile
architecture/: index.html
contributing/: index.html
controller/: Dockerfile  main.go
design/: 0026_2026-05-23_frontend.md  0027_2026-05-24_security-policy-v21.md  0045_2026-07-06_boot-time-user-dek-delivery.md
docs/: index.md
frontend/: Dockerfile  docker-entrypoint.sh
getting-started/: index.html
hack/: monitor-cors-expose-headers.sh  monitor-cors-expose-headers.test.sh  release-wait-for-ci.test.sh  rename-to-llmsafespaces.sh
helm/: CHART-UPGRADE.md  Chart.yaml  KEK-MIGRATION.md  KEK-ROTATION.md  MONITORING-OPERATIONAL.md  README.md  chart_dbinit_test.go  chart_master_secret_test.go  chart_migration_job_test.go  chart_podmonitor_test.go  chart_test.go  epic51_chart_test.go  networkpolicy_cgnat_test.go  values.yaml
local/: bootstrap.sh  deps-postgres.yaml  deps-valkey.yaml  (+1 more)
pkg/: README.md
sdks/python/: pyproject.toml
sdks/python/llmsafespaces/: __init__.py  async_client.py  client.py  types.py
sdks/python/tests/: test_async_client.py  test_client.py  test_ea3_message_contract.py
(+528 files in other folders)
