[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmsafespaces"
version = "0.4.5"
description = "Python SDK for LLMSafeSpaces API"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
dependencies = ["httpx>=0.27.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "respx>=0.22"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_client.py", "test_async_client.py"]
